[gd_scene load_steps=3 format=3 uid="uid://devxjkenqfhit"]

[ext_resource type="Script" path="res://login_page.gd" id="1_cj78y"]
[ext_resource type="PackedScene" uid="uid://dwhvbtssvep64" path="res://page.tscn" id="2_gp614"]

[node name="LoginPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cj78y")

[node name="Page" parent="." instance=ExtResource("2_gp614")]
layout_mode = 1
page_name = "Login"

[node name="InputUsername" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 539.0
offset_top = 207.0
offset_right = 786.0
offset_bottom = 238.0
placeholder_text = "Enter your username..."
clear_button_enabled = true

[node name="InputPassword" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 539.0
offset_top = 258.0
offset_right = 786.0
offset_bottom = 289.0
placeholder_text = "Enter your password..."
secret = true
clear_button_enabled = true

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 441.0
offset_top = 211.0
offset_right = 521.0
offset_bottom = 237.0
text = "Username"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 442.0
offset_top = 258.0
offset_right = 522.0
offset_bottom = 284.0
text = "Password"

[node name="Login" type="Button" parent="."]
layout_mode = 0
offset_left = 550.0
offset_top = 331.0
offset_right = 622.0
offset_bottom = 362.0
text = "Login"

[node name="Home" type="Button" parent="."]
layout_mode = 0
offset_left = 558.0
offset_top = 369.0
offset_right = 613.0
offset_bottom = 400.0
text = "Home"

[node name="Status" type="Label" parent="."]
layout_mode = 0
offset_left = 457.0
offset_top = 417.0
offset_right = 709.0
offset_bottom = 443.0
text = "Incorrect username or password"

[connection signal="pressed" from="Login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="Home" to="." method="_on_home_pressed"]
